--- a/introduction/index.html
+++ b/introduction/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>Personal Profile Web page - Joe Gene Quesada </h1>
+<h1 class="center">Personal Profile Web page - Joe Gene Quesada </h1>
 <p>
 
 About Me<br>
