Update employment history in index.html

--- a/introduction/index.html
+++ b/introduction/index.html
@@ -17,7 +17,7 @@ Education / Achievements<br>
 Course <br>
 IT Experience<br>
  SSCI 1992-1993 <br>
- Digital Systems Inc 1993-1994 <br>
+ Decision Systems Corporation 1993-1994 <br>
  Compuware Corporation 1994 - 2001<br>
 Hobbies & Interests<br>
  - I play the Classical Guitar<br>
